# extraction-experiments

./: bug.v  build.err  dune-project  extraction-experiments.opam  test.v
plugin/: dune  extraction.ml  extraction_interface.ml  file_utils.ml  file_utils.mli  g_plugin.mlg  log.ml  main.ml  main.mli  metaFixpoint.ml  metaFixpoint.mli
tests/: MetaFixpointTests.v  Running.v  Unification.v
theories/: Axioms.v  Control.v  Data.v  Extraction.v  Hitree.v  Loader.v  Logic.v  Makefile  MetaMonad.v  MetaTheory.v  PluginLoader.v  Prelude.v  RunHitree.v  RunMeta.v  Term.v  dune  extraction.v  hello.ml  test.v
theories/Control/: Command.v  Effects.v  Meta.v
theories/Control/Effects/: All.v  Evar.v  Fail.v  Iter.v  Print.v  Rec.v
theories/Data/: Context.v  Evars.v  Term.v
theories/Effects/: Evar.v  Fail.v  Iter.v  Print.v  Rec.v
theories/Extraction/: All.v  Basic.v  Control.v  Data.v  Loader.v  Meta.v
theories/Logic/: Effects.v  Lattice.v  WP.v
theories/Logic/Effects/: Evar.v  Fail.v  Iter.v  Print.v  Rec.v
theories/Meta/: Monad.v  Run.v
theories/MetaTheory/: Confluence.v  Confluence.v_  Conversion.v  Conversion.v_  EvarMap.v  Reduction.v  Relations.v  SubjectReduction.v  SubjectReduction.v_  Substitution.v  Typing.v  Typing.v_
theories/MetaTheory/Conversion/: ContextConversion.v  SubstConversion.v  TermConversion.v
theories/MetaTheory/Reduction/: Confluence.v  ContextReduction.v  RedFlags.v  SubstReduction.v  TermReduction.v
theories/MetaTheory/Typing/: EvarMapTyping.v  SubjectReduction.v  SubjectReduction.v_  SubstTyping.v  TermTyping.v  Validity.v
